[project]
name = "rainwave-library"
version = "2025.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0",
    "fort>=2024.2",
    "htpy>=25.7.0",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "notch>=2025.2",
    "psycopg2-binary>=2.9.10",
    "waitress>=3.0.2",
    "xlsxwriter>=3.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]


[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
