[project]
name = "rainwave-library"
version = "2025.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "fort>=2026.0",
    "htpy>=26.5.1",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "notch>=2026.0",
    "psycopg2-binary>=2.9.12",
    "waitress>=3.0.2",
    "werkzeug>=3.1.5",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.40",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
